SERVER-50836 Initialize TextMatchStage::_inValueAccessor to nullptr